# pktpy

./: .gitignore  CMakeLists.txt  Makefile  README.md  STATUS.md  changes.diff
docs/: API_REFERENCE.md  HOWTO_MODULARIZE.md  IMPLEMENTATION_NOTES.md  MAGIC_METHODS.md  pktpy_external_implementation.md  pyext-editor-integration.md  pyext-implementation-summary.md  python-external.md  solving_typerror_issue.md
docs/api/: Database.md  Inlet.md  Path.md  Table.md  Table_IMPLEMENTATION.md
examples/pyext/: README.md  counter.py  custom_counter.py  default.py  scale.py  simple.py  simple2.py
examples/tests/: README.md  test_api_types.py  test_atom_utils.py  test_atomarray.py  test_clock.py  test_database.py  test_dictionary.py  test_external.py  test_inlet.py  test_message.py  test_object.py  test_object_registration.py  test_outlet.py  test_parse.py  test_patcher_manipulation.py  test_path.py  test_qelem.py  test_systhread.py  test_table.py  test_time.py
help/: pktpy.maxhelp  pyext.maxhelp
scripts/: modularize_api.py
source/projects/pktpy/: API_REFERENCE.md  ATOM_CONVERSION.md  QUICK_REFERENCE.md  pktpy.c  pktpy.h  pktpy_api.h  pktpy_api.h.bak  pktpy_api.h.bak2
source/projects/pktpy/api/: IMPLEMENTATION_GUIDE.md  README.md  REFACTORING_PLAN.md  api_atom.h  api_atomarray.h  api_box.h  api_buffer.h  api_clock.h  api_common.h  api_database.h  api_dictionary.h  api_external.h  api_external_README.md  api_hashtab.h  api_inlet.h  api_linklist.h  api_message.h  api_message_README.md  api_object.h  api_outlet.h  api_patcher.h  api_patchline.h  api_path.h  api_preset.h  api_qelem.h  api_qelem_README.md  api_symbol.h  api_systhread.h  api_systhread_README.md  api_table.h  api_time.h  api_time_README.md
source/projects/pktpy/tests/: test_atomarray.py  test_buffer.py  test_parse.py
source/projects/pyext/: CMakeLists.txt  pyext.c  pyext.h
source/scripts/: update.sh
